# SearchSystem

./: CMakeLists.txt  README.md
DataParser/: DataParser.c  DataParser.h  DocPage.c  DocPage.h  HashTable.c  HashTable.h
IndexBuilder/: Compression.c  Compression.h  IndexBuilder.c  IndexBuilder.h  InvertedIndex.c  InvertedIndex.h  Lexicon.c  Lexicon.h  MergeHeap.c  MergeHeap.h  Utils.c  Utils.h
QueryProcessor/: Decompression.c  Decompression.h  InvertedList.c  InvertedList.h  LexiconTable.c  LexiconTable.h  QueryHeap.c  QueryHeap.h  QueryProcessor.c  QueryProcessor.h
